--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "mongoose": "^6.3.0",
     "multer": "^1.4.4"
   },
   "devDependencies": {},
